--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.22"
-  }
+  },
+  "engines": {
+  "node": ">=18.18.0 <19.0.0"
+}
 }
