--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/node_modules/
 
 # dotenv environment variables file
 .env
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-/node_modules
