--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
@@ -29,6 +30,6 @@
     "nodemon": "^2.0.22"
   },
   "engines": {
-  "node": ">=18.18.0 <19.0.0"
-}
+    "node": ">=18.18.0 <19.0.0"
+  }
 }
